<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@id/action_select_range" android:title="@string/log_viewer_action_select_range" app:showAsAction="never" />
    <item android:id="@id/action_select_all" android:title="@string/log_viewer_action_select_all" app:showAsAction="never" />
    <item android:id="@id/action_copy_logs" android:title="@string/log_viewer_action_copy" app:showAsAction="ifRoom|withText" />
    <item android:id="@id/action_share_logs" android:title="@string/log_viewer_action_share" app:showAsAction="ifRoom|withText" />
    <item android:id="@id/action_export_logs" android:title="@string/log_viewer_action_export" app:showAsAction="ifRoom|withText" />
</menu>
